# manim-exercise

./: .gitmodules  README.md  pyproject.toml
project/: create-circle.py
