[tool.poetry]
name = "manim-exercise"
version = "0.1.0"
description = "This is my exercise project for manim."
authors = ["Fangjun Zhou <fzhou48@wisc.edu>"]
license = "MIT"
readme = "README.md"
packages = [{include = "manim_exercise"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
# manim
manim = { path = "manim", develop = false }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
